<resources>
    <string name="app_name">Formic</string>
    <string name="action_settings">Settings</string>
    <string name="action_dev_console">Developer console</string>
    <string name="action_about">About</string>
    <string name="choose_directory">Choose directory</string>
    <string name="workspace">Workspace</string>
    <string name="projects_folder">Path to the projects to be loaded</string>


    <string name="action_dark_theme">Dark Theme</string>
    <string name="action_light_theme">Light Theme</string>
    <string name="action_import_project">Import project</string>

    <string name="action_synchro">Synchronization</string>

    <string name="today">Today</string>
    <string name="now">Now</string>

    <!-- common no-data messages -->

    <!-- basic actions -->
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>

    <!-- tool button descriptions -->
    <string name="tool_buttons_x">Cancel</string>
    <string name="tool_buttons_i">Info</string>
    <string name="title_activity_form_list_view_handler">FormListViewHandlerActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_forms">Forms</string>
    <string name="title_projects">Projects</string>
    <string name="title_notifications">Notifications</string>

    <string name="layer_aslist">View as list</string>
    <string name="projects">Projects</string>
    <string name="forms">Forms</string>
    <string name="permissions">Permissions</string>
    <string name="mustacceptallpermits">Must accept all permits.</string>
    <string name="no_projects">No projects</string>
    <string name="project_opening_init">Opening project %1$s ...</string>
    <string name="project_opening_finish">Project %1$s open.</string>
    <string name="project_opening_error">There was an error trying to open project %1$s, check developer console.</string>
    <string name="projects_of">"Projects of "</string>
    <string name="forms_of">"Forms of "</string>
    <string name="no_current_project">No current project</string>
    <string name="nolocationenabled">\"No location provider enabled</string>
    <string name="locationsettings">Review location settings</string>
    <string name="Cancel">Cancel</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="no_results">No results</string>
    <string name="logLevel">Log level:</string>
    <string name="debug">DEBUG</string>
    <string name="info">INFO</string>
    <string name="warn">WARN</string>
    <string name="error">ERROR</string>

    <string name="filterBy"><u>Filter by:</u></string>

    <string name="systemLogLevel"><u>Set system log level:</u></string>

    <string name="export">Export</string>
    <string name="detail">Detail</string>

    <!-- action handler messages -->
    <string name="action_save_success">Entity successfully saved.</string>
    <string name="action_create_success">Entity successfully created.</string>

    <string name="action_delete_success">Entity successfully deleted.</string>
    <string name="action_delete_error">An error occurred while deleting the entity. Check dev. console for details.</string>

    <string name="action_generic_invalid_form">Form validation error, check entered data.</string>
    <string name="action_generic_success">Entity successfully updated.</string>
    <string name="action_generic_error">Error while trying to perform user action. Check dev. console for details.</string>

    <string name="not_found">Value not found</string>

    <!-- About -->
    <string name="copyright">\u00A9 2016 - Instituto Tecnológico Agrario de Castilla y León. All rights reserved</string>
    <string name="description">With Formic you can create custom forms with a large number of types of controls to enter data.</string>

    <string name="usedmemory">Used memory: &lt;b>%1$s MB.&lt;/b></string>
    <string name="maxheapsize">Max. heap size: &lt;b>%1$s MB.&lt;/b></string>
    <string name="availheapsize">Avail. heap size: &lt;b>%1$s MB.&lt;/b></string>
    <string name="formicversion">Formic version: &lt;b>%1$s&lt;/b></string>
    <string name="androidversion">Android version: &lt;b>%1$s (%2$s)&lt;/b></string>
    <string name="deviceinfo">Device: &lt;b>%1$s / %2$s / %3$s / %4$s&lt;/b></string>
    <string name="searchforupdates">Search for updates</string>

    <!-- Sign -->
    <string name="sign_here_title">Sign here</string>

    <string name="confirmation">Confirmation</string>
    <string name="information">Information</string>
    <string name="loading">Loading</string>
</resources>
