<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.20"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.6">
            <LinearLayout
                android:id="@+id/field_layout_layout"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                tools:ignore="MissingConstraints">
                <LinearLayout
                    android:id="@+id/buttonLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:background="@android:color/white">
                    <Button
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="bottom"
                        android:clickable="true"
                        android:text="@string/cancel"
                        tools:ignore="ButtonStyle"
                        android:textSize="16sp"
                        android:background="@drawable/roundbutton"/>
                    <Button
                        android:id="@+id/clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:text="@string/clear"
                        tools:ignore="ButtonStyle"
                        android:textSize="16sp"
                        android:background="@drawable/roundbutton"
                        />
                    <Button
                        android:id="@+id/getsign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:text="@string/save"
                        tools:ignore="ButtonStyle"
                        android:textSize="16sp"
                        android:background="@drawable/roundbutton"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/canvasLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.20"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

