<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="?attr/primaryColorVariant">
        <TextView
            android:id="@+id/progress_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="?attr/onPrimaryColor"
            android:padding="20dp"
            />

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            android:src="@drawable/ic_tool_x_circle_dark" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal">

        <ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:clickable="false"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/custom_progress_bar"/>

        <TextView
            android:id="@+id/text_loading_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="20"
            android:scrollbars="vertical"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/loading" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/progress_console_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center_horizontal">
        <ListView
            android:id="@+id/progress_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="?attr/onSurface4Color"
            android:dividerHeight="1dp"
            android:nestedScrollingEnabled="true"
            android:visibility="gone"/>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/show_console_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_action_expand"
                app:iconGravity="textStart"
                app:iconTint="?attr/onPrimaryColor"
                android:backgroundTint="?attr/primaryColor"
                android:text="@string/detail"
                android:textColor="?attr/onPrimaryColor"
                android:drawablePadding="4dp"
                android:layout_marginRight="10dp"
               />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/accept_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:backgroundTint="?attr/primaryColor"
                android:drawablePadding="4dp"
                android:padding="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                />
        </LinearLayout>

    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInputLayoutOutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/progress_console"
            style="@style/Default_TextView_font"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:inputType="textMultiLine|none"
            android:minLines="3"
            android:maxLines="5"
            android:overScrollMode="always"
            android:scrollbars="vertical"
            android:clickable="false"
            android:focusable="false"
            android:cursorVisible="false"
            android:textSize="16sp"
            android:gravity="bottom"
            android:visibility="gone"
            
            />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>